--- a/css/styles.css
+++ b/css/styles.css
@@ -66,8 +66,260 @@ Things to make note of:
 - On the mobile layout there is padding on both sides, indicating a % width was used and then centered.
 
 
-*/
+FONT COLORS
+Background Color: #2d3945
 
-h1 {
-	color: #fede00;
+Font Colors: #2d3945 (heading h2)
+			 #495d70 (secondary)
+
+Input Background Color: #eff0f1
+
+input Focus border color: #46698b
+
+Button Background Color:  #4ebbb5
+
+*/
+/*=============================================
+
+WRAPPER
+
+============================================*/
+
+.wrapper {
+	max-width: 600px;
+	margin: 0 auto;
 }
+
+/*==============================================
+
+FONTS
+
+==============================================*/
+html {
+	font-size: .85em;
+}
+
+* {
+	box-sizing: border-box;
+	font-family: 'Merriweather', serif;
+}
+
+h2 {
+	color: #2d3945;
+}
+
+label,
+fieldset p{
+	color: #495d70;
+}
+
+
+
+/*==============================================
+
+HEADING
+
+==============================================*/
+
+section.heading {
+	display: flex;
+	justify-content: center;
+	align-self: center;
+	width: 100%;
+	background-color: #2d3945;
+	height: 75px;
+}
+
+section.heading h1 {
+	color: white;
+	margin: 0;
+	padding-top: 25px;
+	font-size: 1.3em;
+}
+
+/*==============================================
+
+CALL TO ACTION
+
+==============================================*/
+
+section.callToAction {
+	width: 90%;
+	text-align: center;
+	margin: 0 auto;
+	border-bottom: 4px solid #2d3945;
+	padding-bottom: 15px;
+}
+
+
+/*==============================================
+
+Form Fill Out
+
+==============================================*/
+
+.contactFillOut {
+	width: 90%;
+	margin: 0 auto;
+	margin-top: 3px;
+	border-top: 2px solid #2d3945;
+	border-bottom: 2px solid #2d3945;
+	text-align: left;
+	padding-top: 25px;
+	padding-bottom: 25px;
+}
+
+.contactFillOut form fieldset {
+	border-style: none;
+	padding-left: 0;
+	margin-left: 0;
+	
+}
+
+legend {
+	color: #2d3945;
+	font-size: 1.3em;
+	font-weight: bolder;
+}
+.contactFillOut label {
+	display: block;
+	padding: 15px 0;
+}
+.contactFillOut input,
+.contactFillOut select,
+.contactFillOut option {
+	width: 100%;
+	border-radius: 5px;
+	border-style: none;
+	background-color: #eff0f1;
+	padding: 15px;
+	color: #adb2b7;
+
+}
+
+.contactFillOut input.zipCode {
+	width: 50%;
+}
+
+.contactFillOut input.required::-webkit-input-placeholder { 
+	text-align:right;
+	font-style: italic;
+}
+
+input:focus {
+	outline-color: #46698b;
+}
+
+
+
+
+
+
+/*==============================================
+
+Newsletter Fill Out
+
+==============================================*/
+
+section.newsletterFillOut {
+	padding-top: 25px;
+	width: 90%;
+	margin: 0 auto;
+}
+
+section.newsletterFillOut fieldset {
+	border: none;
+	padding-left: 0;
+}
+
+section.newsletterFillOut div {
+	padding: 7px 0;
+}
+
+section.newsletterFillOut textarea {
+	background-color: #eff0f1;
+	border-style: none;
+	width: 100%;
+	height: 100px;
+	border-radius: 5px;
+	padding: 5px;
+}
+
+section.newsletterFillOut button {
+	width: 100%;
+	padding: 20px;
+	margin-top: 25px;
+	background-color: #4ebbb5;
+	border-style: none;
+	border-radius: 5px;
+	color: #fff;
+	font-size: 1.4em;
+	font-weight: bolder;
+	margin-bottom: 0;
+}
+
+
+
+
+
+/*==============================================
+
+FOOTER
+
+==============================================*/
+
+
+footer {
+	text-align: center;
+	color: lightgray;
+}
+
+
+/*==============================================
+
+MEDIA QUERIES
+
+==============================================*/
+
+/* Media Query for Computers */
+@media (min-width: 760px) {
+	section.callToAction {
+		padding-top: 35px;
+		padding-bottom: 35px;
+	}
+	
+	.contactFillOut input,
+	.contactFillOut select{
+		display: inline-block;
+		width: 72.5%;
+		margin-bottom: 20px;
+	}
+	.contactFillOut label {
+		width: 25%;
+		padding-right: 2.5%;
+		display: inline-block;
+	}
+	
+	.contactFillOut legend {
+		padding-bottom: 20px;
+	}
+	
+	
+	
+	
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
