--- a/css/styles.css
+++ b/css/styles.css
@@ -300,6 +300,10 @@ MEDIA QUERIES
 		display: inline-block;
 	}
 	
+	.contactFillOut input.zipCode {
+		width: 25%;
+	}
+	
 	.contactFillOut legend {
 		padding-bottom: 20px;
 	}
