--- a/css/styles.css
+++ b/css/styles.css
@@ -79,6 +79,8 @@ input Focus border color: #46698b
 Button Background Color:  #4ebbb5
 
 */
+
+
 /*=============================================
 
 WRAPPER
@@ -90,11 +92,13 @@ WRAPPER
 	margin: 0 auto;
 }
 
+
 /*==============================================
 
 FONTS
 
 ==============================================*/
+
 html {
 	font-size: .85em;
 }
@@ -109,10 +113,9 @@ h2 {
 }
 
 label,
-fieldset p{
+fieldset p {
 	color: #495d70;
 }
-
 
 
 /*==============================================
@@ -121,21 +124,30 @@ HEADING
 
 ==============================================*/
 
-section.heading {
+div.heading {
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -ms-flexbox;
 	display: flex;
+	-webkit-box-pack: center;
+	-webkit-justify-content: center;
+	-ms-flex-pack: center;
 	justify-content: center;
+	-webkit-align-self: center;
+	-ms-flex-item-align: center;
 	align-self: center;
 	width: 100%;
 	background-color: #2d3945;
 	height: 75px;
 }
 
-section.heading h1 {
+div.heading h1 {
 	color: white;
 	margin: 0;
 	padding-top: 25px;
 	font-size: 1.3em;
 }
+
 
 /*==============================================
 
@@ -143,7 +155,7 @@ CALL TO ACTION
 
 ==============================================*/
 
-section.callToAction {
+div.callToAction {
 	width: 90%;
 	text-align: center;
 	margin: 0 auto;
@@ -151,8 +163,9 @@ section.callToAction {
 	padding-bottom: 15px;
 }
 
-section.callToAction p {
+div.callToAction p {
 	color: #c4c8cb;
+	font-weight: lighter;
 }
 
 
@@ -177,18 +190,19 @@ Form Fill Out
 	border-style: none;
 	padding-left: 0;
 	margin-left: 0;
-	
 }
 
 legend {
 	color: #2d3945;
-	font-size: 1.3em;
+	font-size: 1.4em;
 	font-weight: bolder;
 }
+
 .contactFillOut label {
 	display: block;
 	padding: 15px 0;
 }
+
 .contactFillOut input,
 .contactFillOut select,
 .contactFillOut option {
@@ -197,25 +211,36 @@ legend {
 	border-style: none;
 	background-color: #eff0f1;
 	padding: 15px;
-	color: #adb2b7;
+}
 
+#stateInfo {
+	color: #adb2b7;
 }
 
 .contactFillOut input.zipCode {
 	width: 50%;
 }
 
-.contactFillOut input.required::-webkit-input-placeholder { 
-	text-align:right;
+.contactFillOut input.required::-webkit-input-placeholder {
+	text-align: right;
 	font-style: italic;
 }
 
-input:focus {
+input:focus,
+select:focus{
 	outline-color: #46698b;
+	background-color: #C4EEF1;
+	-webkit-transition: background-color 1300ms linear;
+	-webkit-transition: background-color 1300ms linear;
+	transition: background-color 1300ms linear;
 }
-
-
-
+input,
+select{
+	background-color: #2c3a3b;
+	-webkit-transition: background-color 500ms linear;
+	-webkit-transition: background-color 500ms linear;
+	transition: background-color 500ms linear;
+}
 
 
 
@@ -225,26 +250,27 @@ Newsletter Fill Out
 
 ==============================================*/
 
-section.newsletterFillOut {
+div.newsletterFillOut {
 	padding-top: 25px;
 	width: 90%;
 	margin: 0 auto;
 }
 
-section.newsletterFillOut fieldset {
+div.newsletterFillOut fieldset {
 	border: none;
 	padding-left: 0;
 }
 
-section.newsletterFillOut div {
+div.newsletterFillOut div {
 	padding: 7px 0;
 }
 
-section.newsletterFillOut textarea {
+div.newsletterFillOut textarea {
 	background-color: #eff0f1;
 	border-style: none;
 	width: 100%;
 	height: 100px;
+	min-height: 100px;
 	border-radius: 5px;
 	padding: 5px;
 	resize: vertical;
@@ -262,19 +288,11 @@ section.newsletterFillOut textarea {
 	font-weight: bolder;
 	margin-bottom: 0;
 }
-
-
-
-
-
-
-
 /*==============================================
 
 FOOTER
 
 ==============================================*/
-
 
 footer {
 	text-align: center;
@@ -288,15 +306,19 @@ MEDIA QUERIES
 
 ==============================================*/
 
+
 /* Media Query for Computers */
+
 @media (min-width: 760px) {
-	section.callToAction {
+	div.callToAction {
 		padding-top: 35px;
 		padding-bottom: 35px;
 	}
-	
+	.contactFillOut {
+		padding-top: 40px;
+	}
 	.contactFillOut input,
-	.contactFillOut select{
+	.contactFillOut select {
 		display: inline-block;
 		width: 72.5%;
 		margin-bottom: 20px;
@@ -306,31 +328,10 @@ MEDIA QUERIES
 		padding-right: 2.5%;
 		display: inline-block;
 	}
-	
 	.contactFillOut input.zipCode {
 		width: 25%;
 	}
-	
 	.contactFillOut legend {
 		padding-bottom: 20px;
 	}
-	
-	
-	
-	
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
