--- a/css/styles.css
+++ b/css/styles.css
@@ -227,7 +227,8 @@ legend {
 }
 
 input:focus,
-select:focus {
+select:focus,
+textarea:focus {
 	outline-color: #46698b;
 	background-color: #C4EEF1;
 	-webkit-transition: background-color 1300ms linear;
@@ -236,8 +237,9 @@ select:focus {
 }
 
 input,
-select {
-	background-color: #2c3a3b;
+select,
+textarea {
+	background-color: #eff0f1;
 	-webkit-transition: background-color 500ms linear;
 	-webkit-transition: background-color 500ms linear;
 	transition: background-color 500ms linear;
@@ -266,7 +268,6 @@ div.newsletterFillOut div {
 }
 
 div.newsletterFillOut textarea {
-	background-color: #eff0f1;
 	border-style: none;
 	width: 100%;
 	height: 100px;
@@ -287,6 +288,22 @@ div.newsletterFillOut textarea {
 	font-size: 1.4em;
 	font-weight: bolder;
 	margin-bottom: 0;
+}
+
+#topicsInterested {
+	margin-top: 20px;
+}
+
+label.topics {
+	margin-top: 25px;
+}
+
+div.topicsInterestedLabel {
+	margin-top: 20px;
+}
+
+.topicsTextarea {
+	margin-top: 10px;
 }
 
 
